2013-08-01  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el: New file.

2013-08-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-warp-to-article): Mention that warp means jump.

	* gnus-uu.el (gnus-uu-mark-thread, gnus-uu-unmark-thread): Work with
	dummy roots, too.

2013-08-01  David Edmondson  <dme@dme.org>

	* mml2015.el (mml2015-epg-key-image-to-string): Protect against bugging
	out on ttys.

2013-08-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-dribble-save): Only save the dribble file if it's
	not empty.

	* nnrss.el (nnrss-discover-feed): Indent.

2013-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-emacs-completing-read): Isolate XEmacs stuff.

2013-07-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-read-active-for-groups): Always mark the data as
	dirty to ensure nnimap data being saved.

2013-07-30  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-summary-make-menu-bar): Add "Current thread score"
	menu entry.

	* gnus-score.el (gnus-summary-current-score): Use prefix arg to show
	the current thread's total score instead of the current article's
	score.

	* gnus-sum.el (gnus-subthread-sort-functions): New defcustom.
	(gnus-sort-threads-recursively): Delete defcustom.
	(gnus-sort-threads-recursive): Adapt accordingly.

2013-07-30  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-sort-subthreads-recursive): New function.
	(gnus-sort-threads-recursive): Use it.
	(gnus-sort-threads): Unconditionally call `gnus-sort-threads-recursive'
	again.  Now that determines how to sort subthreads.

2013-07-26  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-sort-threads-recursively): New defcustom.
	(gnus-sort-threads): Use it.

2013-07-25  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-art.el (gnus-button-url-regexp): Make it match url in which
	punctuation characters follow parentheses (bug#14950).

2013-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>
